# LocalMusicTune

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  mockup.html  pyproject.toml
.cache/acestep/: progress_estimates.json
app/: __init__.py  config.py  main.py  ui.py
app/cli/: phase4.py
app/core/: audio.py  audio_quality.py  device.py  generator.py  gpu_diag.py  patches.py  prompt_builder.py  rocm_runtime.py
app/models/: __init__.py  ace_step_config.py  manager.py  registry.py
app/models/backends/: ace_step.py  base.py  capabilities.py
app/presets/: __init__.py  presets.py
assets/: mockup-steps.html
docs/: UI_DESIGN.md
scripts/: analyze_wav.py  restore_rocm_env.ps1  start_rocm.ps1
tests/: test_ace_step_config.py  test_ace_step_offload.py  test_audio_quality.py  test_device.py  test_generator.py  test_gpu_diag.py  test_manager.py  test_prompt_builder.py  test_registry.py  test_rocm_patches.py  test_rocm_runtime.py  test_ui.py
